Task15 - Add unit tests, Logger and Log(version 1)