@@ -3,16 +3,22 @@ package com.apaliakou.homework15.service.impl;
 import com.apaliakou.homework15.model.User;
 import com.apaliakou.homework15.service.api.UserService;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
 
 public class UserServiceImpl implements UserService {
 
-    private static final List<User> listOfUsers = List.of(
-            new User("Ivan", "Ivanov", "ivanov@mail.ru"),
-            new User("Petya", "Petrov", "petrov@mail.ru"),
-            new User("Fedot", "Fedotov", "fedotov@mail.ru"));
+    private final List<User> listOfUsers;
+
+    public UserServiceImpl(){
+        this.listOfUsers = Arrays.asList(
+                new User("Ivan", "Ivanov", "ivanov@mail.ru"),
+                new User("Petya", "Petrov", "petrov@mail.ru"),
+                new User("Fedot", "Fedotov", "fedotov@mail.ru"));
+    }
+
 
     @Override
     public List<User> getAllUsers() {
